try and fix changing font size on small devices

--- a/stadsarkiv_client/static/css/record.css
+++ b/stadsarkiv_client/static/css/record.css
@@ -91,7 +91,7 @@
     margin: 0;
     padding-bottom: 5px;
     word-break: break-word;
-    width: 100%;
+    min-width: 100%;
 }
 
 .record-content>.content>p.spacing {
